--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body{
     width:100%;
 }
 .nav-bar{
-    background-color:green;
+    background-color:red;
     height:86px;
     width:100%;
     position:fixed;
@@ -23,13 +23,13 @@ a li:hover{
 .main{
     width:100%;
     height:600px;
-    /* background-repeat:no-repeat;
-    background-image:url(imgs\cats.jpg) */
+    background-repeat:no-repeat;
+    background-image:url(../imgs/cats.jpg)
 }
 h1{
     font-size: 56px;
-    margin-top:86px;
-    float:right;
+    margin-top:316px;
+    text-align:center;
 }
 .home-section{
     height:500px;
@@ -41,7 +41,14 @@ h1{
     margin:17px;
     border: black 3px solid;
     float:left;
-
+}
+p{
+    text-align: center;
+}
+.cat-col{
+    height:325px;
+    width:100%;
+    margin-top:62px;
 }
 .footer{
     width:100%;
@@ -49,8 +56,16 @@ h1{
     background-color:green;
 }
 .copy{
-    width:33.3%;
-    float:left;
+    width:100%;
     display:inline-block;
-    margin:auto;
+    margin-left:10px;
+}
+.social{
+    height:100px;
+    text-align:center;
+}
+.fab{
+    font-size:2.5em;
+    color:white;
+    margin:10px;
 }
