--- a/css/about.css
+++ b/css/about.css
@@ -7,13 +7,10 @@
     margin-top:86px;
 }
 .about-main{
-    height:800px;
+    height:100px;
     width:100%;
     margin-top:86px;
 }
-.about-section{
-    height:700px;
-    margin:20px;
-    float:left;
-    border: 1px solid black;
+.main-top{
+    font: size 24;
 }
