--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body{
     width:100%;
 }
 .nav-bar{
-    background-color:red;
+    background-color:green;
     height:86px;
     width:100%;
     position:fixed;
