--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body{
     width:100%;
     position:fixed;
     top:0;
+    z-index:1;
 }
 .list-item{
     background-color:white;
@@ -65,7 +66,7 @@ p{
 }
 .footer{
     width:100%;
-    height:78px;
+    height:94px;
     background-color:green;
 }
 .copy{
